# ironfish-miner

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
src/miner/: mod.rs
src/mining/: header.rs  mine.rs  miner.rs  mod.rs  worker_pool.rs
src/network/: encryption.rs  identity.rs  mod.rs
src/rpc/: client.rs  ipc.rs  mod.rs  stream.rs  types.rs
src/worker_pool/: job.rs  mod.rs  pool.rs  worker.rs
src/worker_pool/tasks/: box_message.rs  create_miners_fee.rs
