[package]
name = "miner-rust"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
log = "0.4.14"
base64 = "0.13.0"
rand = "0.8.4"
num256 = "0.3.2"
blake3 = "1.3.0"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
serde_bytes = "0.11.5"
parity-tokio-ipc = "0.9.0"
# parking_lot = "0.11.2"