[package]
name = "miner-rust"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
futures = "0.3"
log = "0.4"
base64 = "0.13"
rand = "0.8"
num-bigint = "0.4"
blake3 = "1.3"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0"
parity-tokio-ipc = "0.9.0"
byteorder = "1.4.3"