[package]
edition = "2021"
license = "Apache-2.0"
name = "miner-rust"
version = "0.1.0"

[dependencies]
base64 = "0.13"
blake3 = "1.3"
byteorder = "1.4.3"
clap = {version = "3.1.6", features = ["derive"]}
crossbeam-channel = "0.5"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
num-bigint = "0.4"
num_cpus = "1.13"
rand = "0.8"
serde = {version = "1.0.135", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.15.0", features = ["full"]}
